--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
     }
   },
   "AllowedHosts": "*",
- 
+  "ConnectionStrings": {
+    "QRAppContext": "Server=(localdb)\\mssqllocaldb;Database=QRAppContext-16ea2a88-56f7-4ace-a594-83cf23c2ac3d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
